# tower

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  UMBRELLA.md  VISION.md  package.json  tool_plan.md
.cargo/: config.toml
.mana/: .1-make-mana-first-class-in-imp-tooling-and-sidebar.md  .2-architectural-cleanup-for-imp-tui-error-supervisio.md  .2-finish-imp-interactive-runtime-cleanup-and-integra.md  .2.1-normalize-imp-runtime-working-tree-and-isolate-sco.md  .2.2-remove-remaining-sync-join-harvest-bridge-in-tui-r.md  .2.2-supervise-interactive-agent-tasks-through-app-stat.md  .2.3-commit-and-verify-final-imp-interactive-cleanup.md  .2.3-unify-interactive-error-boundaries-and-failure-pre.md  .3-set-up-harbor-adapter-and-terminal-bench-20-runner.md  .gitignore  1-tower-umbrella-migration.md  14-bug-imp-headless-agents-die-mid-execution-without.md  15-bug-imp-headless-system-prompt-assembly-causes-ant.md  16-bug-mana-run-treats-archivedclosed-deps-as-unsatis.md  16.1-wire-config-agent-thresholds-maxturns-hooks-resour.md  17-feature-auto-commit-on-mana-close.md  18-consolidate-imp-tools-merge-diff-probe-and-edit-pa.md  18.1-merge-diffshow-diffapply-into-unified-diff-tool.md  18.2-merge-probesearch-probeextract-into-unified-probe.md  18.3-merge-edit-multiedit-into-unified-edit-tool.md  19-batch-verify-runner-mediated-verification-for-shar.md  19-imp-rush-shell-backend-for-bashtool.md  19.1-add-awaitingverify-status-variant-and-batchverify.md  19.2-deferred-close-mana-close-defer-verify-and-manabat.md  19.3-batch-verify-operation-group-by-command-run-once-a.md  19.4-runner-integration-batch-verify-after-agent-comple.md  19.5-imp-skip-post-agent-verify-when-manabatchverify-is.md  21-replace-pi-with-imp-interactive-tui-sprint.md  21.6-settings-panel-tui-overlay.md  21.7-model-selection-with-config-driven-enabled-list.md  21.8-integration-test-full-tui-session-lifecycle.md  23-bug-mana-status-uses-checkblocked-without-archive.md  23.1-memory-store-and-memory-tool.md  24-bug-mana-run-fails-to-claim-units-after-previous-a.md  25-imp-manatool-read-mode-from-toolcontext-instead-of.md  27-improve-mana-pool-competitive-grade-dispatch-engin.md  27.1-budget-and-circuit-breaker-for-dispatch.md  27.2-retry-context-in-spawner-trait.md  27.3-shared-verify-deduplication.md  27.4-worktree-isolation-for-parallel-dispatch.md  (+14 more)
.vibecheck/: vibecheck.db-shm  vibecheck.db-wal
evals/: README.md  __init__.py  promptfooconfig.yaml  task-completion-config.yaml
familiar/: ESTIMATES.md  README.md  plan.md  yc-application.md
ghosttyfox/: README.md  package-lock.json  package.json
imp/: .gitignore  ARCHITECTURE.md  Cargo.toml  Cargo.workspace.toml  ENGINEERING_GUARDRAILS.md  IMP_DEEP_REVIEW.md  IMP_REVIEW.md  LEARNING_LOOP_SPEC.md  README.md  SYSTEM_PROMPT_PROPOSAL.md  art.html  art.md  gen_art.py  (+2 more)
imp/crates/imp-cli/: Cargo.toml
imp/crates/imp-cli/src/: main.rs  usage_report.rs
imp/crates/imp-core/: Cargo.toml
imp/crates/imp-core/benches/: core_hot_paths.rs  grep_vs_probe.rs
imp/crates/imp-core/examples/: reuse-bench.rs  tool_ab_harness.rs  tool_surface_live.rs
imp/crates/imp-core/skills/lua-tools/: SKILL.md
imp/crates/imp-core/skills/writing-skills/: REFERENCE.md
imp/crates/imp-core/src/: agent.rs  builder.rs  compaction.rs  config.rs  context.rs  context_prefill.rs  error.rs  guardrails.rs  hooks.rs  imp_session.rs  import.rs  learning.rs  lib.rs  memory.rs  personality.rs  resources.rs  retry.rs  roles.rs  session.rs  session_index.rs  system_prompt.rs  ui.rs  usage.rs
imp/crates/imp-core/src/tools/: ask.rs  bash.rs  diff.rs  edit.rs  extend.rs  find.rs  grep.rs  ls.rs  lua.rs  mana.rs  memory.rs  mod.rs  multi_edit.rs  probe.rs  query.rs  read.rs  session_search.rs  shell.rs  skill_manage.rs  tree_sitter.rs  write.rs  write_lua.rs  write_skill.rs
imp/crates/imp-core/src/tools/scan/: go.rs  mod.rs  python.rs  rust.rs  types.rs  typescript.rs
imp/crates/imp-core/src/tools/web/: mod.rs  read.rs  search.rs  types.rs
imp/crates/imp-llm/: Cargo.toml
imp/crates/imp-llm/src/: auth.rs  error.rs  lib.rs  message.rs  model.rs  provider.rs  stream.rs  text.rs  usage.rs
imp/crates/imp-llm/src/oauth/: anthropic.rs  chatgpt.rs  mod.rs  pkce.rs
imp/crates/imp-llm/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  openai_codex.rs  openai_compat.rs
imp/crates/imp-lua/: Cargo.toml
imp/crates/imp-lua/src/: bridge.rs  lib.rs  loader.rs  sandbox.rs
imp/crates/imp-tui/: Cargo.toml
imp/crates/imp-tui/src/: animation.rs  app.rs  highlight.rs  interactive.rs  keybindings.rs  lib.rs  markdown.rs  selection.rs  terminal.rs  theme.rs  tui_interface.rs  turn_tracker.rs
imp/crates/imp-tui/src/views/: ask_bar.rs  chat.rs  command_palette.rs  editor.rs  file_finder.rs  login_picker.rs  mod.rs  model_selector.rs  personality.rs  secrets_picker.rs  session_picker.rs  settings.rs  sidebar.rs  status.rs  tool_output.rs  tools.rs  top_bar.rs  tree.rs  welcome.rs
mana/crates/mana-core/: Cargo.toml
mana/crates/mana-core/src/: agent_presets.rs  blocking.rs  config.rs  ctx_assembler.rs  discovery.rs  error.rs  failure.rs  graph.rs  history.rs  hooks.rs  index.rs  lib.rs  locks.rs  prompt.rs  relevance.rs  util.rs  verify_lint.rs  worktree.rs
mana/crates/mana-core/src/api/: mod.rs
mana/crates/mana-core/src/bean/: mod.rs
mana/crates/mana-core/src/ops/: adopt.rs  batch_verify.rs  claim.rs  close.rs  config_cmd.rs  context.rs  create.rs  delete.rs  dep.rs  fact.rs  init.rs  list.rs  memory_context.rs  mod.rs  move_units.rs  mutate.rs  plan.rs  recall.rs  reopen.rs  run.rs  show.rs  stats.rs  status.rs  sync.rs  tidy.rs  unarchive.rs  update.rs  verify.rs
mana/crates/mana-core/src/unit/: mod.rs  types.rs
mana/crates/mana-core/tests/: api_integration.rs
mana/crates/mana-review/: Cargo.toml
mana/crates/mana-review/src/: diff.rs  feedback.rs  lib.rs  queue.rs  render.rs  risk.rs  state.rs  types.rs
wizard/crates/wizard-orch/: Cargo.toml
wizard/crates/wizard-orch/src/: lib.rs  main.rs
wizard/crates/wizard-store/: Cargo.toml
wizard/crates/wizard-store/src/: lib.rs
(+601 files in other folders)
