[package]
name = "imp-cli"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Binary entry point for imp"

[[bin]]
name = "imp"
path = "src/main.rs"

[dependencies]
imp-llm.workspace = true
imp-core.workspace = true
imp-tui.workspace = true
imp-lua.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
clap.workspace = true
futures.workspace = true
futures-util = "0.3"
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
