[package]
name = "imp-core"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Agent engine — loop, tools, sessions, hooks, context"

[dependencies]
imp-llm.workspace = true
mana-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures-core.workspace = true
futures.workspace = true
uuid.workspace = true
toml.workspace = true
similar.workspace = true
walkdir.workspace = true
glob = "0.3"
regex = "1"
ignore.workspace = true
project-detect.workspace = true
readability-rust.workspace = true
reqwest.workspace = true
url.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
jsonschema = "0.45"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "grep_vs_probe"
harness = false

[dev-dependencies]
tempfile = "3"
