[package]
name = "imp-core"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Agent engine — loop, tools, sessions, hooks, context"

[dependencies]
imp-llm.workspace = true
mana-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures-core.workspace = true
futures.workspace = true
uuid.workspace = true
toml.workspace = true
similar.workspace = true
walkdir.workspace = true
glob = "0.3"
regex = "1"
ignore.workspace = true
project-detect.workspace = true
rayon.workspace = true
readability-rust.workspace = true
reqwest.workspace = true
url.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
jsonschema = "0.45"
rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# rush is an optional local-only dependency for shell backend experiments.
# To enable: clone rush locally and uncomment with your path, then build with --features rush-backend.
# [dependencies.rush]
# path = "/path/to/rush"
# optional = true

[features]
# When rush is available locally, uncomment the [dependencies.rush] above and enable:
# rush-backend = ["rush"]
# For now, declare the feature so cfg(feature = "rush-backend") compiles without warnings.
rush-backend = []

[[bench]]
name = "grep_vs_probe"
harness = false

[dev-dependencies]
tempfile = "3"
