[package]
name = "imp-tui"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Terminal UI (ratatui)"

[dependencies]
imp-core.workspace = true
serde.workspace = true
imp-llm.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
walkdir.workspace = true
uuid.workspace = true
async-trait.workspace = true
syntect = "5"
unicode-width = "0.2"
imp-lua.workspace = true

[dev-dependencies]
tempfile = "3"
