[package]
name = "mana-review"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Code review engine for mana — risk scoring, diff analysis, HTML viewer, feedback loop"
license = "AGPL-3.0-or-later"
repository = "https://github.com/kfcafe/mana"

[lib]
name = "mana_review"
path = "src/lib.rs"

[dependencies]
mana-core = { path = "../mana-core" }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4.20", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

[dev-dependencies]
tempfile = "3"
