[package]
name = "wizard-orch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Daemon and command-line orchestration surface for Wizard"

[lib]
name = "wizard_orch"
path = "src/lib.rs"

[[bin]]
name = "wiz"
path = "src/main.rs"

[dependencies]
mana-core.workspace = true
serde.workspace = true
serde_json.workspace = true
wizard-proto.workspace = true
wizard-store.workspace = true
wizard-terminal.workspace = true
wizard-browser.workspace = true
