[package]
name = "wizard-orch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Daemon and command-line orchestration surface for Wizard"

[lib]
name = "wizard_orch"
path = "src/lib.rs"

[[bin]]
name = "wiz"
path = "src/main.rs"

[dependencies]
mana-core.workspace = true
notify = "6.1"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tempfile = "3.13"
tokio = { version = "1.0", features = ["sync", "rt", "time"] }
wizard-proto.workspace = true
wizard-store.workspace = true
wizard-terminal.workspace = true
wizard-browser.workspace = true
