[package]
name = "wizard-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local state persistence and cache for Wizard"

[dependencies]
serde.workspace = true
serde_json.workspace = true
wizard-proto.workspace = true

[dev-dependencies]
tempfile = "3.8"
